--- a/main.css
+++ b/main.css
@@ -1,13 +1,17 @@
-* {font-family: 'Quicksand', sans-serif;}
-.dyn{color: yellow;}
+* {
+	font-family: 'Quicksand', sans-serif;
+}
+.dyn {
+	color: yellow;
+}
 [aos="fade"] {
-  opacity: 0;
-  transition-property: opacity;
+	opacity: 0;
+	transition-property: opacity;
 }
-
 [aos="fade"].aos-animate {
-  opacity: 1;
+	opacity: 1;
 }
+/*Styling for butt1<!---->*/
 .butt1 {
 	display: flex;
 	flex-direction: column;
@@ -16,17 +20,17 @@
 	padding: 1% 1%;
 	transition-duration: 0.2s;
 	transform-style: flat;
-	transform-origin:right;
+	transform-origin: right;
 	background-color: yellow;
 	border-radius: 20px;
 	font-size: 24px;
 	color: black;
 	align-content: center;
 	border: thick rgba(13,78,115,1.00);
-	width:60%;
+	width: 60%;
 }
-.butt1:hover{
-	color:rgba(157,173,36,1.00);
+.butt1:hover {
+	color: rgba(157,173,36,1.00);
 	background-color: black;
 	font-size: 23px;
 	width: 30%;
