--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,134 @@
 @charset "UTF-8";
-.header {
-	color: rgba(190,220,18,1.00);
+.header {color: black;
+	padding: 30px 30px;
+	font-size: 2em;
+	animation-name: dynText;
+    animation-duration: 0.7s;
+	animation-iteration-count: infinite;
+	-webkit-animation-name: dynText;
+    -webkit-animation-duration: 0.7s;
+	-webkit-animation-iteration-count: infinite;
+}
+sections[role="section"] { 
+    font-size: 1.001em;
+}
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+margin: 40px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+	margin: 40px;
+}
+#myDIV {
+    width: 100%;
+    padding: 50px 0;
+    text-align: center;
+    background-color: lightblue;
+    margin-top: 20px;
+}
+/*simple animation*/
+@keyframes simple {
+	0%   {background-color:red; }
+    25%  {background-color:yellow; }
+	50%  {background-color:blue;}
+	75%  {background-color:green; }
+    100% {background-color:red; }
+}
+/*Animation for dynamic icons.*/
+@keyframes dynIco {
+	0% {transform: scale(1);}
+		50% {transform: scale(1.3);}
+	100% {
+		transform: scale(1);}}
+/*Animation for dynamic text*/
+@keyframes dynText {
+	0% {color: brown}
+	50% {color: black}
+	100% {color: brown}
+}
+@-webkit-keyframes dynIco {
+	0% {transform: scale(1);}
+		50% {transform: scale(1.3);}
+	100% {
+		transform: scale(1);}}
+
+@-webkit-keyframes dynText {
+	0% {color: brown}
+	50% {color: black}
+	100% {color: brown}
+}
+form > label {
+	font-size: 1.1em;
+}
+#main {
+	color: black;
+}
+.skill-header {
+	margin-left: 10%;
+	color: coral;
+	font-size: 2em;
+}
+.bg {
+	width: 100%;
+}
+.data{
+	margin: 0% 47%;
+	font-size: 2em;
+}
+#mainArt{
+	margin-top: 150px;
+}
+#button {
+	border-radius: 30px;
+	height: 60px;
+	color: yellow;
+	background-color: black;
+	align-content: center;
+	align-items: center;
+	align-self: center;
+	padding: 0 30%;
+	transition-duration: 0.4s;
+}
+#button:hover {
+	font-size: 1.6em;
+	border-radius: 30px;
+	height: 60px;
+	color: black;
+	background-color: yellow;
+	transform: skewX(20px);
+}
+form {
+	padding: 20px 20px;
 }
 .item {
   width: 200px;
@@ -26,24 +154,29 @@
 	padding-right: 0px;
 	padding-bottom: 0px;
     display:table;
-    background: linear-gradient( rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85) ), url('../images/coding-screen.jpg');
     background-position:center top;
     height:350px;
 	background-size: contain;
 }
+#white{
+	height: 1%;
+}
 .header {
+	margin-top: 15%;
 	font-size: 45px;
 	color: yellowgreen;
 	border-radius: 7px;
 	margin-left: 10px;
 	margin-right: 10px;
+	background-color: yellow;
+	border: 2px thin black;
 }
 .reduce {
 	width: 80px;
 	height: 60px;
 }
 .inv {
-	filter: invert(1);
+	filter: invert(0);
 }
 #inv{
 	opacity: 0;
@@ -75,9 +208,13 @@
 	display: table; /* [1] */
 	table-layout: fixed; /* [2] */
 	width: 100%; /* [3] */
+	border-radius: 20px;
 }
 .tabs__item {
 	display: table-cell; /* [4] */
+}
+.tabs__link {
+	background-color: antiquewhite; /* [5] */
 }
 .tabs__link {
 	display: block; /* [5] */
@@ -97,10 +234,9 @@
 	transition-duration: 0.4s;
 }
 .primary-nav a:hover {
-	background-color: #262626;
+	background-color: #FFFFFF;
 	transform: scale(1.07);
 	color: black;
-	background-color: white;
 }
 .row {
 	width: 100%;
@@ -122,7 +258,6 @@ p {
 }
 .details {
 	font-size: 20px;
-	color: black;
 }
 .column_half {
 	width: 100%;
@@ -133,7 +268,7 @@ p {
 	width: 25%;
 	float: left;
 	font-family: 'Quicksand', sans-serif;
-	color: #A5A5A5;
+	color: #000000;
 	line-height: 24px;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -165,7 +300,7 @@ p {
 	width: 100%;
 	padding-top: 50px;
 	padding-bottom: 50px;
-	background-color: #666;
+	background-color: #000000;
 	clear: left;
 }
 .container .secondary_header ul {
@@ -192,7 +327,6 @@ p {
 	text-align: center;
 	width: 16%;
 	transition: all 0.2s linear;
-	width: 100%;
 }
 .secondary_header ul li:hover {
 	color: #111;
@@ -206,7 +340,7 @@ p {
 	width: 60%;
 	float: left;
 	font-family: 'Quicksand', sans-serif;
-	color: #343434;
+	color: #000000;
 	padding-bottom: 15px;
 }
 .noDisplay {
@@ -216,7 +350,7 @@ p {
 	padding-left: 5%;
 	padding-right: 5%;
 	margin-top: 5%;
-	color: #717070;
+	color: #000000;
 	font-weight: bold;
 	text-transform: uppercase;
 }
@@ -227,7 +361,7 @@ p {
 	line-height: 24px;
 	margin-top: 30px;
 	margin-bottom: 15px;
-	color: #B3B3B3;
+	color: #000000;
 }
 .right_article {
 	width: 40%;
@@ -543,6 +677,13 @@ body {
 	margin-left: auto;
 	transition-duration: 0.3s;
 	border: 5px dashed rgba(107,142,205,1.00);
+	animation-name: dynIco;
+    animation-duration: 2s;
+	animation-iteration-count: infinite;
+/*	Safari fallback*/
+	-webkit-animation-name: dynIco;
+    -webkit-animation-duration: 2s;
+	-webkit-animation-iteration-count: infinite;
 }
 .thumbnail2 {
 	width: 60px;
@@ -591,4 +732,6 @@ body {
 }
 
 .skill-header {
+}
+#mainArt {
 }
